--- a/src/font.css
+++ b/src/font.css
@@ -2,6 +2,7 @@
   font-family: "GowunDodum-Regular";
   font-weight: normal;
   src: url("./fonts/GowunDodum-Regular.woff2") format("woff2");
+  font-display: swap;
 }
 
 @font-face {
